--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_auth: ^3.1.1
   cloud_firestore: ^2.5.3
   android_alarm_manager_plus: "^1.1.0"
+  awesome_notifications: ^0.0.6+10
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +55,7 @@ flutter:
     - assets/medmind.jpeg
     - assets/bell.png
     - assets/adduser.png
+    - assets/pill.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
