--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ flutter:
     - assets/bell.png
     - assets/adduser.png
     - assets/pill.png
+    - assets/cancel_bell.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
