--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ flutter:
     - assets/adduser.png
     - assets/pill.png
     - assets/cancel_bell.png
+    - assets/subscription.png
+    - assets/diamond.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
